Revise some typo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p class="caption">Spiderman with his armor</p>
 
 		<!-- Facts -->
-		<h2>About Spiderman's fun facts:</h2>
+		<h2>Spider-Man's fun facts:</h2>
 		<ol>
 			<li>Spider-Man first appeared in 1962</li>
 			<li>There have been nine Spider-Man movies made</li>
@@ -34,7 +34,7 @@
 		</ol>
 
 		<!-- Cast -->
-		<h2>Spidermans's Cast</h2>
+		<h2>Spider-Mans's Cast</h2>
 		<p>Spiderman AKA Peter Parker was played by three different actors from time to time. Here's the list:</p>
 		<ul>
 			<li> <a href="https://en.wikipedia.org/wiki/Tobey_Maguire">Tobey Maguire </a></li>
