--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<!-- Cast -->
 		<h2>Spider-Mans's Cast</h2>
-		<p>Spiderman AKA Peter Parker was played by three different actors from time to time. Here's the list:</p>
+		<p>Spiderman AKA Peter Parker was played by three different actors from time to time. Here they are:</p>
 		<ul>
 			<li> <a href="https://en.wikipedia.org/wiki/Tobey_Maguire">Tobey Maguire </a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Andrew_Garfield">Andrew Garfield</a></li>
