--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li>Spider-Man first appeared in 1962</li>
 			<li>There have been nine Spider-Man movies made</li>
 			<li>There was a Spider-Man musical</li>
+			<li>It's Spider-Man, not spiderman! hihi</li>
 		</ol>
 
 		<!-- Cast -->
