Adding tab icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nunito:wght@300&display=swap" rel="stylesheet">
+	<!-- Tab icon-->
+	<link rel="icon" href="img/Icon.png">
+
+	<!-- CSS File-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
